--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
+<p><%= link_to "Add Product", new_product_path %></p>
 <h2> Products in the market </h2>
-
 <ul>
   <% @products.each do |product| %>
     <li>
-      Product Name: "<%= product.name %>" costs $<%= product.price %>  |  
+    Product Name: "<%= link_to product.name, product %>" costs $<%= product.price %>  |  
 	  Sold by <%= product.user.name if product.user.present? %>    
     </li>
   <% end %>
